--- a/src/main/resources/templates/itemPages/itemCtry1.html
+++ b/src/main/resources/templates/itemPages/itemCtry1.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>main</title>
+  <title>Find your Base :)</title>
   <!--bootstrap cdn-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <!--  폰트-->
