--- a/src/main/resources/templates/itemPages/itemCtry2.html
+++ b/src/main/resources/templates/itemPages/itemCtry2.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" th:href="@{/css/main.css}">
 <head>
   <meta charset="UTF-8">
-  <title>main</title>
+  <title>Find your Base :)</title>
 </head>
 
 <body style="background-color: white">
