--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -87,7 +87,7 @@
     }
     //카카로 로그인 javascript
     //0. init 안에 앱 키 중 'javascript 키' 넣기
-    Kakao.init('5ca0c2c747c6a9590ce005b29d09b00c');
+    Kakao.init('---');
     $("#kakao-login-btn").on("click", function () {
         const url = [[${redirectURL}]];
         //1. 로그인 시도
