카카오 앱키

--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -87,7 +87,7 @@
     }
     //카카로 로그인 javascript
     //0. init 안에 앱 키 중 'javascript 키' 넣기
-    Kakao.init('---');
+    Kakao.init('278e677004746c3d93c21657a06997eb');
     $("#kakao-login-btn").on("click", function () {
         const url = [[${redirectURL}]];
         //1. 로그인 시도
